@@ -1,8 +1,16 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.5 2004/12/12 21:45:55 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.6 2004/12/12 22:45:37 agaffney Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
+
+  12 Dec 2004; John Laliberte <allanonl@bu.edu>
+  Networking.py updated to check ips while you type, as well as disabling
+  the dropdown if any of the ip's are faulty.  This version turns the
+  background of the gtk.Entry to "pink" until a valid ip address is found.
+  Timezone.py updated to include the function generate_timezones which had
+  previously been put in GLIUtility. Networking.py code has been
+  overhauled/cleaned up to reflect the growing complexity of the panel.
 
   12 Dec 2004; Andrew Gaffney <agaffney@gentoo.org>
   Completed rough working NetworkMounts screen: adds/removes/updates entries
